# data-record-rs

./: CHANGELOG.md  Cargo.toml  README.md
examples/: basic.rs  impl_const_and_getter.rs  impl_const_and_getter_attributes.rs
src/: derive_input.rs  lib.rs
tests/: basic.rs  impl_const_and_getter.rs  impl_const_and_getter_attributes.rs
